--- a/music/templates/music/music_detail.html
+++ b/music/templates/music/music_detail.html
@@ -9,7 +9,7 @@
 <p><h4>Cantante: {{ music.singer }}</h4></p>
 <p><h4>Año: {{ music.year }}</h4></p>
 <h4>Descripción:</h4>
-<p>{{ music.plot|safe }}</p>
+<p>{{ music.review|safe }}</p>
 <p><h4>Autor: {{ music.author }}</h4></p>
 <p><h5>Posteado: {{ music.post_date | date:"d-m-Y h:m" }}</h5></p>
 <p></p>
