--- a/user/templates/user/avatar_form.html
+++ b/user/templates/user/avatar_form.html
@@ -4,7 +4,7 @@
 
 <h2>Cargar imagen de Avatar</h2>
 <hr></hr>
-<h3>Usuario: {{user.first_name}}</h3>
+<h3>Usuario: {{user.username}}</h3>
 
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
