--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,12 +1,12 @@
 {% extends "home/index.html" %}
 {% load static %}
-{% block facus-blog_content %}
+{% block seci-project_content %}
 
 <h2>Registro</h2>
 <hr></hr>
 
 {% if form.errors %}
-<p style="color: red">Por favor llene todos los campos.</p>
+<p style="color: red">Por favor diligenciar la forma completa.</p>
 {% endif %}
 
 <form action="" method="POST">
