--- a/user/templates/user/user_form.html
+++ b/user/templates/user/user_form.html
@@ -1,6 +1,6 @@
 {% extends "home/index.html" %}
 {% load static %}
-{% block seci-project_content %}
+{% block facus-blog_content %}
 
 <h2>Formulario para editar usuarios</h2>
 <hr></hr>
